[package]
name = "anifunnel"
version = "1.4.0"
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
log = "0.4"
regex = "1.10"
rocket = "0.5.0-rc"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.0"
strsim = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "default-tls"] }

[dev-dependencies]
test-case = "3.1"
