[package]
name = "anifunnel"
version = "2.0.0"
edition = "2021"
resolver = "2"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
regex = "1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5"
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate", "chrono"] }
strsim = "0.11"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }

[dev-dependencies]
chrono = "0.4"
httpmock = "0.8"
test-case = "3.1"

[build-dependencies]
npm_rs = "1.0"
